--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
 	<header class="main-header">
+
 		<div class="main-header-container">
 			<a href="index.html" class="logo">
 				<svg class="logo-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -21,11 +22,12 @@
 				</svg>
 				<span class="logo-text">Waxom</span>
 			</a>
+			<div class="main-header-mobile">
+				<input type="checkbox" id="menu">
+				<label for="icons" class="menu"></label>
+			</div>
 			<nav class="main-navigation">
-				<!--<label for="mobile-menu" class="label-mobile-menu"></label>
-					Для мобильного меню
-					<input type="checkbox" id="mobile-menu">
-					Для мобильного меню-->
+
 				<ul class="main-navigation-list">
 					<li><a class="main-navigation-item" href="#">Home</a></li>
 					<li><a class="main-navigation-item main-navigation-item-active" href="#">About Us</a></li>
@@ -532,14 +534,13 @@
 				</ul>
 				<ul class="footer-bottom-right">
 					<li>Designed by <a href="#">ThemeFire</a></li>
-					<li>Only on <a href="#">Envato
-							Market</a></li>
+					<li>Only on <a href="#">Envato Market</a></li>
 				</ul>
 			</div>
 		</section>
 	</footer>
 
-
+	<script src="js/main.js"></script>
 </body>
 
 </html>
